@@ -56,11 +56,12 @@ namespace QuestPDF.Fluent
         }
         
         /// <include file='../Resources/Documentation.xml' path='documentation/doc[@for="text.lineHeight"]/*' />
-        public static TextStyle LineHeight(this TextStyle style, float factor = 1)
+        public static TextStyle LineHeight(this TextStyle style, float? factor)
         {
             if (factor <= 0)
                 throw new ArgumentException("Line height must be greater than 0.");
             
+            factor ??= TextStyle.NormalLineHeightCalculatedFromFontMetrics;
             return style.Mutate(TextStyleProperty.LineHeight, factor);
         }
 
